--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,10 +1,36 @@
 {
   "recommendations": [
-    "Equinusocio.vsc-material-theme",
-    "vscode-icons-team.vscode-icons",
-    "esbenp.prettier-vscode",
-    "ritwickdey.LiveServer",
+    "formulahendry.auto-rename-tag",
+    "aaron-bond.better-comments",
+    "ultram4rine.vscode-choosealicense",
+    "adpyke.codesnap",
+    "Equinusocio.vsc-community-material-theme",
+    "Dart-Code.dart-code",
+    "ms-vscode-remote.remote-containers",
+    "ms-azuretools.vscode-docker",
+    "dbaeumer.vscode-eslint",
+    "toba.vsfire",
+    "Dart-Code.flutter",
+    "alexisvt.flutter-snippets",
     "codezombiech.gitignore",
-    "aaron-bond.better-comments"
+    "eamodio.gitlens",
+    "golang.go",
+    "VisualStudioExptTeam.vscodeintellicode",
+    "VisualStudioExptTeam.intellicode-api-usage-examples",
+    "ms-python.isort",
+    "ms-toolsai.jupyter",
+    "ms-toolsai.vscode-jupyter-cell-tags",
+    "ms-toolsai.jupyter-keymap",
+    "ms-toolsai.jupyter-renderers",
+    "ms-toolsai.vscode-jupyter-slideshow",
+    "ms-vscode.live-server",
+    "PKief.material-icon-theme",
+    "esbenp.prettier-vscode",
+    "ms-python.vscode-pylance",
+    "ms-python.python",
+    "humao.rest-client",
+    "alexcvzz.vscode-sqlite",
+    "svelte.svelte-vscode",
+    "bradlc.vscode-tailwindcss",
   ]
 }
