refactor: remove deprecated extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,7 +4,7 @@
     "aaron-bond.better-comments",
     "ultram4rine.vscode-choosealicense",
     "adpyke.codesnap",
-    "Equinusocio.vsc-community-material-theme",
+    "Equinusocio.vsc-material-theme",
     "Dart-Code.dart-code",
     "ms-vscode-remote.remote-containers",
     "ms-azuretools.vscode-docker",
